--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <body text = "green">
         <h1>Приветь</h1>
-        <p>I'm hosted with GitHub Pages!</p>
+    </body>
+    <body text = "red">
+        <p>Я захостил с помощью GitHub Pages!</p>
     </body>
 </html>
