--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <body text = "green">
-        <h1>Приветь</h1>
-    </body>
-    <body text = "red">
-        <p>Я захостил с помощью GitHub Pages!</p>
+    <title>Люблю Кариняку<3</title>
+    <body>
+        <h1> <font color = "green">Приветь</font> </h1>
+        <h2> <font color = "red"> я не знаю что ты тут делаешь, но я рад что ты загдянул сюда :) </font></h2>
+        <br>
+        <br>
+        <br>
+        <h6>Да мам, я поставил еду в холодильник</h6>
     </body>
 </html>
